# Airdrop-Software-2022

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md
.gitlab/issue_templates/: Feature.md  Testing.md
docs/: CODE_STANDARD.md  DESIGN.md  FAQ.md  WORK_FLOW.md  class_uml.puml
gui/wall-E-GUI/: README.md
rover/: README.md
rover/Wall-E/: platformio.ini
rover/Wall-E/include/calibration/: init_checker.h
rover/Wall-E/include/controller/: boundary_check.h  boundary_line.h  landing_controller.h  planning.h  rover_controller.h  rover_controller.hpp  state_machine.h
rover/Wall-E/integration test logs/: 2021-01-16.md  2021-01-17.md  template.md
rover/Wall-E/lib/: README.md
rover/Wall-E/lib/include/: constants.h  pin_assignment.h
rover/Wall-E/src/: main.cpp
rover/Wall-E/src/controller/: README.md  boundary_check.cpp  (+5 more)
rover/Wall-E/test/: README.md  maintest.ino  test.h  test_main.cpp
rover/wall-E-GUI/: pyproject.toml
rover/wall-E-GUI/tests/: test_wall_e_gui.py
simulation/walle/: README.md
simulation/walle/worlds/: .empty.wbproj  empty.wbt
winch/Winch/src/: main.cpp
winch/done_i_think/: platformio.ini
winch/done_i_think/src/: Magnetic_Encoder.h  Operation.cpp  Pin_Assignments.h  main.cpp
winch/motor_test_teensy/src/: main.cpp
winch/no teensy/: platformio.ini
winch/no teensy/src/: Communication.h  Communicaton.cpp  Magnetic_Encoder.cpp  Operation.cpp  Pin_Assignments.h  main.cpp
winch/winch_auvsi_2022_amy/: platformio.ini
winch/winch_auvsi_2022_amy/src/: Operation.cpp  Operation.h  Winch_Libraries.h  main.cpp
(+42 files in other folders)
