[tool.poetry]
name = "wall-E-GUI"
version = "0.1.0"
description = ""
authors = ["Rainerino <albertyanyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
digi-xbee = "^1.3.0"
PyQt5 = "^5.15.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
